--- a/SobolevAA_HW2.1.2/Base.lproj/Main.storyboard
+++ b/SobolevAA_HW2.1.2/Base.lproj/Main.storyboard
@@ -16,33 +16,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="5bD-64-jlY">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="5bD-64-jlY">
                                 <rect key="frame" x="87" y="73" width="240" height="643"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w5k-mR-n2p">
+                                    <view alpha="0.25" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w5k-mR-n2p">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="207"/>
                                         <color key="backgroundColor" systemColor="systemPinkColor"/>
                                     </view>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OdO-cT-9rL">
+                                    <view alpha="0.25" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OdO-cT-9rL">
                                         <rect key="frame" x="0.0" y="210" width="240" height="219"/>
                                         <color key="backgroundColor" systemColor="systemYellowColor"/>
                                         <variation key="heightClass=regular-widthClass=compact">
                                             <color key="backgroundColor" systemColor="systemYellowColor"/>
                                         </variation>
                                     </view>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s3i-2v-DkE">
+                                    <view alpha="0.25" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s3i-2v-DkE">
                                         <rect key="frame" x="0.0" y="432" width="240" height="211"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
                                     </view>
                                 </subviews>
                                 <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
+                                <constraints>
+                                    <constraint firstItem="w5k-mR-n2p" firstAttribute="height" secondItem="OdO-cT-9rL" secondAttribute="height" multiplier="0.945205" id="08H-Ld-Fjs" userLabel="Red Signal.height =  Yellow Signal.height"/>
+                                    <constraint firstItem="OdO-cT-9rL" firstAttribute="width" secondItem="s3i-2v-DkE" secondAttribute="width" id="BQb-SH-NUT"/>
+                                    <constraint firstItem="OdO-cT-9rL" firstAttribute="top" secondItem="w5k-mR-n2p" secondAttribute="bottom" constant="3" id="Gec-sw-Qdv"/>
+                                    <constraint firstItem="OdO-cT-9rL" firstAttribute="height" secondItem="s3i-2v-DkE" secondAttribute="height" multiplier="1.03791" id="kar-Kd-zkN"/>
+                                </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tSw-2e-Ix9">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tSw-2e-Ix9">
                                 <rect key="frame" x="120" y="777" width="160" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button">
+                                <buttonConfiguration key="configuration" style="plain" title="СТАРТ">
                                     <backgroundConfiguration key="background">
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="strokeColor" systemColor="labelColor"/>
@@ -57,8 +62,12 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tSw-2e-Ix9" secondAttribute="trailing" constant="134" id="2nP-qX-zjG"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="w5k-mR-n2p" secondAttribute="trailing" constant="87" id="686-si-BNc"/>
+                            <constraint firstItem="tSw-2e-Ix9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="120" id="Em8-Ck-jwh"/>
                             <constraint firstItem="w5k-mR-n2p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="ke7-0E-2Ow"/>
+                            <constraint firstItem="tSw-2e-Ix9" firstAttribute="top" secondItem="5bD-64-jlY" secondAttribute="bottom" constant="61" id="lbe-8q-FS1"/>
+                            <constraint firstAttribute="bottom" secondItem="5bD-64-jlY" secondAttribute="bottom" constant="180" id="sVo-Cz-n7X"/>
                             <constraint firstItem="w5k-mR-n2p" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="29" id="xYL-kE-LjT"/>
                         </constraints>
                     </view>
